# tomli-w

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yaml
benchmark/: README.md  data.toml  requirements.txt  run.py
src/tomli_w/: _writer.py
tests/: requirements.txt  test_for_profiler.py  test_invalid.py  test_style.py  test_types.py  test_valid.py  test_write_file.py
tomli_dumps/: __init__.py  _writer.py
tomli_w/: __init__.py  _writer.py
